--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,4 +7,7 @@
   .gradient-title {
     @apply bg-clip-text text-transparent bg-gradient-to-r from-blue-500 via-purple-500 to-pink-500;
   }
+  .gradient{
+    @apply bg-gradient-to-r from-blue-500 via-purple-500 to-pink-500;
+  }
 }
